--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,3 +14,7 @@ djangorestframework-simplejwt>=5.3.0,<6.0  # JWT 認証
 
 # APIドキュメント
 drf-spectacular>=0.26.0,<0.27
+
+# 単体テスト
+pytest>=7.0,<8.0
+pytest-django>=4.0,<5.0
