guest アプリの統合修正・テスト追加・Docker環境対応
- guest アプリの全APIを APIView スタイルに統一（Guest, VisitType, VisitSchedule, ScheduleUpload）
- models.py に基づいて serializers.py を整備（バリデーション含む）
- views.py に OCR 処理統合（ScheduleOCRProcessor 使用）
- Dockerfile に OpenCV 用依存パッケージ（libgl1, libglib2.0-0）を追加
- cv2 の ImportError(libGL.so.1) に対応
- guest 用の test_guest_serializers.py / test_guest_views.py を user スタイルに合わせて新規作成
- guest,meal,staff full_name → name 等に修正

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,19 +1,23 @@
 ﻿# Python 3.11 の公式イメージを使用
 FROM python:3.11
 
-# 環境変数を設定します
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
+# 環境変数を設定します（書き込みキャッシュ防止、バッファ抑制）
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
 # 作業ディレクトリを設定
 WORKDIR /app
 
-# システム依存関係をインストールします
+# システム依存関係をインストールします（OpenCV / OCR 用含む）
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    gcc libpq-dev && rm -rf /var/lib/apt/lists/*
+    gcc \
+    libpq-dev \
+    libgl1 \
+    libglib2.0-0 \
+    && rm -rf /var/lib/apt/lists/*
 
 # Python の依存関係をインストール
-COPY requirements.txt .
+COPY requirements.txt .7
 RUN pip install --no-cache-dir -r requirements.txt
 
 # プロジェクトファイルをコピー
