--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,3 +18,12 @@ drf-spectacular>=0.26.0,<0.27
 # 単体テスト
 pytest>=7.0,<8.0
 pytest-django>=4.0,<5.0
+
+# requirements.txt for yomitoku OCR project
+# 使用 Python 3.10+，推荐在 Anaconda 虚拟环境中运行
+# 若使用 GPU 可将 onnxruntime 替换为 onnxruntime-gpu（需 CUDA 环境）
+yomitoku
+onnxruntime==1.17.1
+numpy==1.26.4
+opencv-python
+Pillow
