--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,8 +17,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
 # Python の依存関係をインストール
-COPY requirements.txt .7
-RUN pip install --no-cache-dir -r requirements.txt
+COPY requirements.txt .
+RUN pip install -r requirements.txt
 
 # プロジェクトファイルをコピー
 COPY . .
