--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-﻿version: '3.9'
+﻿
 
 services:
   backend:
@@ -8,11 +8,11 @@ services:
       sh -c "python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
     volumes:
-      - ./backend:/app  # ローカルのコードをコンテナに同期
+      - ./backend:/app # ローカルのコードをコンテナに同期
     ports:
-      - "8000:8000"  # Django API 用ポート
+      - "8000:8000" # Django API 用ポート
     depends_on:
-      - db  # DB コンテナが起動後に実行
+      - db # DB コンテナが起動後に実行
     environment:
       POSTGRES_DB: mydatabase
       POSTGRES_USER: myuser
@@ -31,22 +31,23 @@ services:
     ports:
       - "5434:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data  # DB データの永続化
+      - postgres_data:/var/lib/postgresql/data # DB データの永続化
 
   frontend:
     build: ./frontend
     container_name: shifts_vue_frontend
+    working_dir: /app
     ports:
-      - "5173:5173"  # Vite 用ポート
+      - "5173:5173" # Vite 用ポート
     volumes:
-      - ./frontend:/app
-      - /app/node_modules  # node_modules をコンテナ内に保持
-    depends_on:
-      - backend  # Django 起動後にフロントエンドを起動
+      - ./frontend/shifts_project:/app
+      # - /app/node_modules # node_modules をコンテナ内に保持
+    # depends_on:
+    #   - backend  # Django 起動後にフロントエンドを起動
     # TODO: 下記の起動確認完了後、コメントアウトを外す
-    # command: >
-    #   sh -c "npm install && npm run dev -- --host 0.0.0.0"
-    # tty: true
+    command: >
+      sh -c "npm install && npm run dev -- --host 0.0.0.0"
+    tty: true
 
 volumes:
-  postgres_data:  # DB のデータ永続化用
+  postgres_data: # DB のデータ永続化用
