✨ ログイン機能の実装（JWT認証＋ユーザー一覧取得まで連携） - axios の共通インスタンスを作成し、トークン自動付与を設定 - LoginForm.vue を追加し、ログイン画面を実装 - ログイン成功後に access_token を保存し、ユーザー一覧を取得 - .env.development の baseURL 設定ミスを修正

--- a/frontend/shifts_project/.env.development
+++ b/frontend/shifts_project/.env.development
@@ -1,4 +1,3 @@
 ﻿NODE_ENV ="development"
-APP_TITLE = "介護士シフト・食事・訪問管理システム"
-APP_BASE_API = "/api"
-APP_SERVE = "http://127.0.0.1:8000/"
+VITE_APP_TITLE = "介護士シフト・食事・訪問管理システム"
+VITE_API_BASE_URL=http://127.0.0.1:8000/api
