--- a/frontend/shifts_project/package.json
+++ b/frontend/shifts_project/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.9.0",
     "element-plus": "^2.9.10",
     "pinia": "^3.0.2",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "^22.15.17",
